@@ -1,5 +1,11 @@
 2008-06-08 Dodji Seketeli <dodji@gnome.org>
 
+	* src/confmgr/nmv-i-conf-mgr.h, src/confmgr/nmv-gconf-mgr.cc: add
+	  IConfMgr::get_key_value() and IConfMgr::set_key_value() for list
+	  values.
+
+2008-06-08 Dodji Seketeli <dodji@gnome.org>
+
 	* src/confmgr/nmv-i-conf-mgr.h, src/confmgr/nmv-gconf-mgr.cc:
 	  At end of lines, remove the space before the ";" <grin/>.
 
